--- a/src/MySpot.Api/Properties/launchSettings.json
+++ b/src/MySpot.Api/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MySpot.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7062;http://localhost:5068",
+      "launchBrowser": false,
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
