--- a/src/MySpot.Api/MySpot.Api.csproj
+++ b/src/MySpot.Api/MySpot.Api.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MySpot.Core\MySpot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
