--- a/src/MySpot.Api/MySpot.Api.csproj
+++ b/src/MySpot.Api/MySpot.Api.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MySpot.Core\MySpot.Core.csproj" />
+    <ProjectReference Include="..\MySpot.Application\MySpot.Application.csproj" />
   </ItemGroup>
 
 </Project>
