--- a/tests/MySpot.Tests.Unit/MySpot.Tests.Unit.csproj
+++ b/tests/MySpot.Tests.Unit/MySpot.Tests.Unit.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\MySpot.Api\MySpot.Api.csproj" />
+    <ProjectReference Include="..\..\src\MySpot.Application\MySpot.Application.csproj" />
+    <ProjectReference Include="..\..\src\MySpot.Core\MySpot.Core.csproj" />
   </ItemGroup>
 
 </Project>
