--- a/src/MySpot.Api/appsettings.json
+++ b/src/MySpot.Api/appsettings.json
@@ -10,6 +10,6 @@
     "name": "MySpot API"
   },
   "postgres": {
-    "connectionString": "Host=localhost;Database=MySpot;Username=postgres;Password="
+    "connectionString": "Host=localhost:54321;Database=MySpot;Username=postgres;Password="
   }
 }
