--- a/src/MySpot.Api/appsettings.json
+++ b/src/MySpot.Api/appsettings.json
@@ -11,6 +11,12 @@
   "app": {
     "name": "MySpot API"
   },
+  "auth": {
+    "issuer": "myspot-issuer",
+    "audience": "myspot-audience",
+    "expiry": "00.01:00:00",
+    "signingKey": "prqUOMIkO1ilZkWTSNOyHjrvgFu0P3eaDq5pNffA7PU="
+  },
   "postgres": {
     "connectionString": "Host=localhost:54321;Database=MySpot;Username=postgres;Password="
   }
