--- a/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
+++ b/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
@@ -25,6 +25,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
