--- a/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
+++ b/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="MySpot.Tests.Unit" />
+    <InternalsVisibleTo Include="MySpot.Tests.Integration" />
   </ItemGroup>
 
 </Project>
